# musics

./: .gitignore  Cargo.toml  README.md  dirsave.txt  kys.github  model.uxf
src/: formula_parser.lalrpop  main.rs  not_retarded_vector.rs
src/audio_player/: mod.rs
src/data_loader/: mod.rs
src/spectrum_page/: drawer.rs  mod.rs
src/wav_writer/: mod.rs
src/waveform_page/: ast.rs  drawer.rs  effects.rs  grammar.idk  grammar2.idk  mod.rs  parser.rs  sources.rs
